--- a/faithWeb/css/main.css
+++ b/faithWeb/css/main.css
@@ -215,6 +215,11 @@ a{
 .samll_pro li h3 {
     margin-top: 30px;
     margin-bottom: 10px;
+    overflow: hidden;
+    display: block;
+    height: 20px;
+    width: 100%;
+
 }
 .samll_pro li p {
     color: #b0b0b0;
