--- a/faithWeb/view/main.html
+++ b/faithWeb/view/main.html
@@ -14,15 +14,15 @@
     <script>
       $(function() {   
                 // 获取token  
-                var token = localStorage.getItem('token')
+                var token = localStorage.getItem('token');
                 var userName=localStorage.getItem('userName');
                 //如果有token证明已经登录
                 if(token!=""){
                 //登录成功后实现的特效隐藏前两个a标签
                 $("#topbar_changeA a").eq(0).css("display","none");
-               $("#topbar_changeA a").eq(1).css("display","none");
-               $("#topbar_changeA a").eq(2).html(userName);
-               $("#topbar_changeA span").eq(0).css("display","none");
+                $("#topbar_changeA a").eq(1).css("display","none");
+                $("#topbar_changeA a").eq(2).html(userName);
+                $("#topbar_changeA span").eq(0).css("display","none");
 
                 }
                   // 将token设置到请求头headers中
@@ -162,7 +162,7 @@
       <img src="../img/logo.jpg" width="110" height="100">
       <ul>
         <li><a>首页</a> </li>
-        <li><a>全部商品</a> </li>
+        <li><a href="../view/goods.html">全部商品</a> </li>
         <li><a>关于我们</a> </li>
       </ul>
     
