--- a/faithWeb/view/details.html
+++ b/faithWeb/view/details.html
@@ -59,8 +59,8 @@
       <div class="search_con">
         <img src="../img/logo.jpg" width="110" height="100">
         <ul>
-          <li><a>首页</a> </li>
-          <li><a>全部商品</a> </li>
+          <li><a href="../view/main.html">首页</a> </li>
+          <li><a href="../view/goods.html">全部商品</a> </li>
           <li><a>关于我们</a> </li>
         </ul>
         
@@ -80,6 +80,7 @@
       <div class="pageHead">
           <div class="title">
               <p id="phoneTitle">RedMi Note5</p>
+              <a id="pid" style="display: none;"></a>
           </div>
       </div>
        <div class="main">
@@ -108,7 +109,7 @@
               <p class="price_sum"></p>
              </div>
             <div class="div_button">
-              <button class="layui-btn layui-btn-radius layui-btn-warm left_btn">加入购物车</button>
+              <button class="layui-btn layui-btn-radius layui-btn-warm left_btn" onclick="addOrder()">加入购物车</button>
               <button class="layui-btn layui-btn-radius right_btn">不喜欢</button>
             </div>
             <div class="pro_policy">
