--- a/faithWeb/view/goods.html
+++ b/faithWeb/view/goods.html
@@ -255,8 +255,8 @@
       <div class="search_con">
         <img src="../img/logo.jpg" width="110" height="100">
         <ul>
-          <li><a>首页</a> </li>
-          <li><a>全部商品</a> </li>
+          <li><a href="../view/main.html">首页</a> </li>
+          <li><a href="../view/goods.html">全部商品</a> </li>
           <li><a>关于我们</a> </li>
         </ul>
         
