feat:优化了跨域问题，ajax请求头中需要加入Bearer token

--- a/faithWeb/view/details.html
+++ b/faithWeb/view/details.html
@@ -109,7 +109,7 @@
               <p class="price_sum"></p>
              </div>
             <div class="div_button">
-              <button class="layui-btn layui-btn-radius layui-btn-warm left_btn" onclick="addOrder()">加入购物车</button>
+              <button class="layui-btn layui-btn-radius layui-btn-warm left_btn" id="addBtn">加入购物车</button>
               <button class="layui-btn layui-btn-radius right_btn">不喜欢</button>
             </div>
             <div class="pro_policy">
