--- a/faithWeb/css/Order.css
+++ b/faithWeb/css/Order.css
@@ -166,7 +166,7 @@ background-color: #424242;
     top: 50px;
 }
 .details_main{
-    height: 800px;
+    height: 1080px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -226,4 +226,92 @@ background-color: #424242;
 
     line-height: 36px;
 
+}
+.adressDiv{
+    width: 263px;
+    height: 148px;
+    border: 1px solid orange;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    margin-top: 15px;
+}
+.adress_txt{
+width: 280px;
+height: 160px;
+
+}
+.prod_dev{
+    width: 100%;
+    border-top: 1px gray solid;
+    border-bottom: 1px gray solid;
+}
+.prod_dev ul{
+    width: 100%;
+    height: 300px;
+}
+.prod_dev li{
+    width: 100%;
+    float: left;
+    height: 50px;
+}
+.prod_dev li img{
+    float: left;
+}
+.prod_dev li a{
+    display: block;
+    width: 200px;
+    height: 100%;
+    float: left;
+    line-height: 50px;
+}
+.a_prodName{
+  margin-left: 50px;
+ 
+}
+.a_price{
+    float: right;
+    line-height: 50px;
+   
+}
+.baoyou_tit{
+    width: 100%;
+    height: 50px;
+   border-bottom: 1px solid gray;
+}
+.tit_span{
+    height: 100%;
+    width: 80px;
+} 
+.fapiao_tit{
+    width: 100%;
+    height: 80px;
+    border-bottom: 1px solid gray;
+}
+.jiesuan_dev{
+    width: 100%;
+    height: 256px;
+    border-bottom: 1px solid gray;
+}
+.mingxi{
+    height: 100%;
+    width: 285px;
+    float: right;
+}
+.mingxi ul{
+    width: 100%;
+    height: 100%;
+}
+.mingxi ul li{
+    width: 100%;
+    height: 40px;
+}
+.right_txt{
+    float: right;
+    color: orange;
+}
+.sum_txt{
+    float: right;
+    color: orange;
+    font-size: 22px;
 }
