--- a/faithWeb/view/test.html
+++ b/faithWeb/view/test.html
@@ -5,21 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="../js/jq1.10.2.js"></script>
+        <!-- 引入 layui.css -->
+        <link rel="stylesheet" href="../css/layui.css">
+        <!-- 引入 layui.js -->
+        <script src="../js/layui.js"></script>
+        <script src="../js/jq1.10.2.js"></script>
+  
 </head>
 <body>
-
-    <input type="text" name="numName" id="num" οnkeyup="value=value.replace(/^(0+)|[^\d]+/g,'')">
-    <button id="btn1">查询</button>
+  <table id="demo" lay-filter="test"></table>
+  <script type="text/html" id="toolbarDemo">
+    <div class="layui-btn-container">
+      <button class="layui-btn layui-btn-sm" lay-event="delete">删除</button>
+    </div>
+  </script>
 </body>
 <script> 
 $(function(){
-$("#btn1").click(function(){
-var index=$("#num").val();
-  console.log(index);
-})
+        var arr={
+          id:"1",
+          userName:"faith"
+        }
+        layui.use('table', function(){
+        var table = layui.table;
+        table.render({
+          elem:'#demo',
+          data:arr,
+          toolbar: '#toolbarDemo',
+          cols: [[
+            {field:'id', title:'ID', width:100},
+            {field:'userName', title:'名字', width:100}
+            ,{fixed: 'right', width:150, align:'center', toolbar: '#barDemo'} //这里的toolbar值是模板元素的选择器
+          ]]
+        });
+                //触发事件
+        table.on('toolbar(test)', function(obj){
+          var checkStatus = table.checkStatus(obj.config.id);
+          switch(obj.event){
+            case 'delete':
+              layer.msg('删除');
+            break;
+          
+          };
+        });
+        })
+});
 
-})
+
+
 
 </script>
 </html>
